--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "prop-types": "^15.8.1"
   }
 }
